--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,6 +14,36 @@ a:hover {
     border-bottom-color: transparent;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    color: #787878;
+    font-weight: normal;
+    margin: 0 0 1em;
+}
+
+h1 {
+    font-size: 36px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+h3 {
+    font-size: 26px;
+}
+
+h4 {
+    font-size: 22px;
+}
+
+h5 {
+    font-size: 18px;
+}
+
+h6 {
+    font-size: 15px;
+}
+
 .main-header {
     position: fixed;
     top: 0;
